feat(gc): jdk 1.8 gc learn note